<resources>
    <string name="app_name">Horoscope Chinois - Biorythme de l\'E.T.R.E.S</string>
    <string name="file_pref">FENGSUIPREF</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_binome_year">ViewBinomeYearActivity</string>
    <string name="title_activity_view_biorythme">ViewBiorythmeActivity</string>
    <string name="title_activity_view_influence_day">ViewInfluenceDayActivity</string>
    <string name="horoscope">Horoscope</string>
    <string name="biorythme">Biorythme complet</string>
    <string name="parametres">Paramètres</string>
    <string name="accueil">Accueil</string>
    <string name="votre_horoscope">Votre Horoscope</string>
    <string name="votre_energie">Votre Energie</string>
    <string name="mon_horoscope">Mon Horoscope</string>
    <string name="mon_energie">Mon Energie</string>
    <string name="mois1">Janvier</string>
    <string name="mois2">Février</string>
    <string name="mois3">Mars</string>
    <string name="mois4">Avril</string>
    <string name="mois5">Mai</string>
    <string name="mois6">Juin</string>
    <string name="mois7">Juillet</string>
    <string name="mois8">Août</string>
    <string name="mois9">Septembre</string>
    <string name="mois10">Octobre</string>
    <string name="mois11">Novembre</string>
    <string name="mois12">Décembre</string>
    <string name="influence_creation">CREATION - ACTION</string>
    <string name="influence_communication">COMMUNICATION - PARTAGE</string>
    <string name="influence_realisation">RESILIATION - CONCRET</string>
    <string name="influence_sensation">SENSATION - INSTINCT</string>
    <string name="influence_lucidite">LUCIDITE - ECOUTE</string>
    <string name="desc_page_biorythme">Je découvre ici mon biorythme chinois et ma synthèse des éléments.</string>
    <string name="desc_page_horoscope">Je retrouve ici mon horoscope du jour, du mois et de l\'année.</string>
    <string name="day">HoroJour</string>
    <string name="month">HoroMois</string>
    <string name="year">HoroAnnée</string>
    <string name="correspondance_annee">HUMEUR</string>
    <string name="correspondance_mois">AMOUR</string>
    <string name="correspondance_jour">CHANCE</string>
    <string name="correspondance_heure">SANTE</string>
    <string name="influence_annee_tf">Energie très favorable pour vos projets.</string>
    <string name="influence_annee_fc">Journée plutôt favorable et porteuse.</string>
    <string name="influence_annee_cc">Cela passe ou cela casse aujourd\'hui.</string>
    <string name="influence_annee_pc">Attendez vous à de petites complications aujourd\'hui</string>
    <string name="influence_annee_d">Soyez prudent aujourd\'ui, les énergies ne sont pas avec vous !</string>
    <string name="influence_mois_tf">Energie très favorable pour vos projets.</string>
    <string name="influence_mois_fc">Journée plutôt favorable et porteuse.</string>
    <string name="influence_mois_cc">Cela passe ou cela casse aujourd\'hui.</string>
    <string name="influence_mois_pc">Attendez vous à de petites complications aujourd\'hui</string>
    <string name="influence_mois_d">Soyez prudent aujourd\'ui, les énergies ne sont pas avec vous !</string>
    <string name="influence_jour_tf">Energie très favorable pour vos projets.</string>
    <string name="influence_jour_fc">Journée plutôt favorable et porteuse.</string>
    <string name="influence_jour_cc">Cela passe ou cela casse aujourd\'hui.</string>
    <string name="influence_jour_pc">Attendez vous à de petites complications aujourd\'hui</string>
    <string name="influence_jour_d">Soyez prudent aujourd\'ui, les énergies ne sont pas avec vous !</string>
    <string name="influence_heure_tf">Energie très favorable pour vos projets.</string>
    <string name="influence_heure_fc">Journée plutôt favorable et porteuse.</string>
    <string name="influence_heure_cc">Cela passe ou cela casse aujourd\'hui.</string>
    <string name="influence_heure_pc">Attendez vous à de petites complications aujourd\'hui</string>
    <string name="influence_heure_d">Soyez prudent aujourd\'ui, les énergies ne sont pas avec vous !</string>
    <string name="moi_social">Moi Social</string>
    <string name="moi_affectif">Moi Affectif</string>
    <string name="key_creation">Création</string>
    <string name="key_action">Action</string>
    <string name="key_communication">Communication</string>
    <string name="key_partage">Partage</string>
    <string name="key_realisation">Réalisation</string>
    <string name="key_concret">Concret</string>
    <string name="key_sensation">Sensation</string>
    <string name="key_instinct">Instinct</string>
    <string name="key_Lucidite">lucidité</string>
    <string name="key_ecoute">Ecoute</string>
    <string name="ma_synthese">Ma Synthèse</string>
    <string name="synthese_general">Je retrouve ici ma synthèse des éléments, ceux qui sont dominants et ceux qui sont vides.</string>
    <string name="changer_biorythme">Changer Biorythme</string>
    <string name="parametre">Paramètres</string>
    <string name="element_neutre">Mes éléments Equilibrés</string>
    <string name="element_vide">Mes éléments Vides</string>
    <string name="element_dominant">Mes éléments Dominants</string>
    <string name="pas_element_dominant">Pas d\'élèments Dominants</string>
    <string name="pas_element_neutre">Pas d\'élèments équilibrés</string>
    <string name="pas_element_vide">Pas d\'élèments Vides</string>
    <string name="comment_lire_synthese">Comment lire ma synthèse</string>
    <string name="valider">Valider</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="retour_accueil">Retour Accueil</string>
    <string name="changer_date_enregistree">Voulez-vous changer la date enregistrée ?</string>
    <string name="suivant">Suivant</string>
    <string name="retour">Retour</string>
    <string name="reset">RESET</string>
    <string name="nous_valuer">Nous évaluer</string>
    <string name="glossaire">Glossaire</string>
    <string name="achats">Achats</string>
    <string name="changer_langue">Changer Langue</string>
    <string name="pas_dispo">Cette fonctionnalité n\'est pas encore disponible.</string>
    <string name="reinitialiser">Reinitialiser</string>
    <string name="ok">OK</string>
    <string name="reinit_donnee">Etes-vous sûr de vouloir réinitialiser les données ?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="pas_renseigne">Non renseigné</string>
    <string name="happy_birthday">Bon anniversaire !</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_biorythme_perso">biorythme</string>
    <string name="pref_date_perso">date_annif</string>
    <string name="pref_biorythme_current">biorythme_current</string>
    <string name="pref_date_current">date_current</string>
    <string name="pref_nb_credit">nb_credit</string>
    <string name="pref_date_sauv_1">pref_date_sauv_1</string>
    <string name="pref_date_sauv_2">pref_date_sauv2</string>
    <string name="pref_date_sauv_3">pref_date_sauv3</string>
    <string name="plus_de_credit">Vous n\'avez plus de crédits disponibles.</string>
    <string name="ajout_credit">Ajouter des crédits</string>
    <string name="chargement">Chargement...</string>
    <string name="firstTime">first_time</string>
    <string name="erreur_video">Le chargement de la vidéo a échoué</string>
    <string name="erreur">ERREUR</string>
    <string name="date_hors_limite">Date hors limite</string>
    <string name="succes">Succès</string>
    <string name="succes_credit">Vous avez récupéré 1 crédit.</string>
    <string name="key_device_test">9F8A6AA43AFBB8C5A38C022EAE85D6AF</string>
    <string name="erreur_annonce">Le chargement de l\'annonce a échoué.</string>
    <string name="id_pub_interstitiel">ca-app-pub-1517732795926726/4674302495</string>
    <string name="nbAd">nbAd</string>
    <string name="jj">JJ</string>
</resources>
