<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fibredariane.horoscope.chinois.biorythmeETRES.Activities.ParameterFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:isScrollContainer="true"
        android:overScrollMode="always"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parametre"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="@dimen/fab_margin">

                <LinearLayout
                    android:id="@+id/linear_layout_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/customborder"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/reset"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:visibility="gone"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:src="@drawable/menu_switch" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="Modifier ma Date Anniversaire"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium">
                </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_langue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:src="@drawable/menu_francais"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/changer_langue"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:visibility="invisible"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_achat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:src="@drawable/menu_achat"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/achats"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:visibility="invisible"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_glossaire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:src="@drawable/menu_glossaire"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/glossaire"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:visibility="invisible"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_evaluation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:src="@drawable/menu_etoile"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/nous_valuer"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:visibility="invisible"></TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="end"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="Test"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:text="Version :"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
            <TextView
                android:id="@+id/version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:text="XXX"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_gravity="bottom"
                android:text="ID Biorythme :"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
            <TextView
                android:id="@+id/biorythmme_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:text="XXX"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>