<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical"
    tools:context="com.fibredariane.horoscope.chinois.biorythmeETRES.Activities.AccueilFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="90dp">

        <TextView
            android:id="@+id/text_view_horoscope_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="HOROSCOPE"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_horoscope_expl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Description horoscope "
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/image_view_meteo_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/meteo_fc_accueil" />

        <TextView
            android:id="@+id/text_view_horoscope_annee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="Energie très favorable pour vos projets." />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin_double"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view_horoscope_bio_annee"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:src="@drawable/bois_arbre_grande_foret_mini" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/correspondance_annee"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:id="@+id/image_view_horoscope_meteo_annee"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/meteo_fc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view_horoscope_bio_mois"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:src="@drawable/bois_arbre_grande_foret_mini" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/correspondance_mois"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:id="@+id/image_view_horoscope_meteo_mois"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/meteo_fc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view_horoscope_bio_jour"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:src="@drawable/bois_arbre_grande_foret_mini" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/correspondance_jour"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:id="@+id/image_view_horoscope_meteo_jour"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/meteo_fc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view_horoscope_bio_heure"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:src="@drawable/bois_arbre_grande_foret_mini" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/correspondance_heure"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:id="@+id/image_view_horoscope_meteo_heure"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/meteo_tf" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>